--- a/cul.html
+++ b/cul.html
@@ -12,9 +12,10 @@
             align-items: center;
             height: 100vh;
             background-color: #f4f4f4;
+            margin: 0;
         }
         .calculator {
-            width: 250px;
+            width: 300px;
             background: white;
             padding: 20px;
             border-radius: 10px;
@@ -31,11 +32,16 @@
             background: #eee;
             margin-bottom: 10px;
             border-radius: 5px;
+            box-sizing: border-box;
+        }
+        .buttons {
+            display: grid;
+            grid-template-columns: repeat(4, 1fr);
+            gap: 10px;
         }
         .buttons button {
-            width: 22%;
-            height: 50px;
-            margin: 5px;
+            width: 100%;
+            height: 60px;
             font-size: 1.2em;
             cursor: pointer;
             border: none;
@@ -49,12 +55,12 @@
         .buttons button.equals {
             background: green;
             color: white;
-            width: 48%;
+            grid-column: span 2;
         }
         .buttons button.clear {
             background: red;
             color: white;
-            width: 48%;
+            grid-column: span 2;
         }
     </style>
 </head>
@@ -63,22 +69,22 @@
         <input type="text" id="display" class="display" disabled>
         <div class="buttons">
             <button onclick="clearDisplay()" class="clear">C</button>
+            <button onclick="appendToDisplay('/')" class="operator">/</button>
+            <button onclick="appendToDisplay('*')" class="operator">*</button>
+            <button onclick="appendToDisplay('-')" class="operator">-</button>
             <button onclick="appendToDisplay('7')">7</button>
             <button onclick="appendToDisplay('8')">8</button>
             <button onclick="appendToDisplay('9')">9</button>
-            <button onclick="appendToDisplay('/')" class="operator">/</button>
+            <button onclick="appendToDisplay('+')" class="operator">+</button>
             <button onclick="appendToDisplay('4')">4</button>
             <button onclick="appendToDisplay('5')">5</button>
             <button onclick="appendToDisplay('6')">6</button>
-            <button onclick="appendToDisplay('*')" class="operator">*</button>
             <button onclick="appendToDisplay('1')">1</button>
             <button onclick="appendToDisplay('2')">2</button>
             <button onclick="appendToDisplay('3')">3</button>
-            <button onclick="appendToDisplay('-')" class="operator">-</button>
+            <button onclick="calculateResult()" class="equals">=</button>
             <button onclick="appendToDisplay('0')">0</button>
             <button onclick="appendToDisplay('.')">.</button>
-            <button onclick="calculateResult()" class="equals">=</button>
-            <button onclick="appendToDisplay('+')" class="operator">+</button>
         </div>
     </div>
     <script>
