--- a/cul.html
+++ b/cul.html
@@ -15,7 +15,7 @@
             margin: 0;
         }
         .calculator {
-            width: 300px;
+            width: 320px;
             background: white;
             padding: 20px;
             border-radius: 10px;
@@ -55,12 +55,10 @@
         .buttons button.equals {
             background: green;
             color: white;
-            grid-column: span 2;
         }
         .buttons button.clear {
             background: red;
             color: white;
-            grid-column: span 2;
         }
     </style>
 </head>
@@ -78,29 +76,4 @@
             <button onclick="appendToDisplay('+')" class="operator">+</button>
             <button onclick="appendToDisplay('4')">4</button>
             <button onclick="appendToDisplay('5')">5</button>
-            <button onclick="appendToDisplay('6')">6</button>
-            <button onclick="appendToDisplay('1')">1</button>
-            <button onclick="appendToDisplay('2')">2</button>
-            <button onclick="appendToDisplay('3')">3</button>
-            <button onclick="appendToDisplay('.')">.</button>
-            <button onclick="appendToDisplay('0')">0</button>
-            <button onclick="calculateResult()" class="equals">=</button>
-        </div>
-    </div>
-    <script>
-        function appendToDisplay(value) {
-            document.getElementById('display').value += value;
-        }
-        function clearDisplay() {
-            document.getElementById('display').value = '';
-        }
-        function calculateResult() {
-            try {
-                document.getElementById('display').value = eval(document.getElementById('display').value);
-            } catch (error) {
-                alert('输入错误');
-            }
-        }
-    </script>
-</body>
-</html>
+            <button o
