--- a/cul.html
+++ b/cul.html
@@ -56,10 +56,14 @@
             background: green;
             color: white;
             grid-row: span 2;
+            grid-column: 4;
         }
         .buttons button.clear {
             background: red;
             color: white;
+            grid-column: span 2;
+        }
+        .buttons button.zero {
             grid-column: span 2;
         }
     </style>
@@ -79,11 +83,11 @@
             <button onclick="appendToDisplay('4')">4</button>
             <button onclick="appendToDisplay('5')">5</button>
             <button onclick="appendToDisplay('6')">6</button>
-            <button onclick="calculateResult()" class="equals">=</button>
             <button onclick="appendToDisplay('1')">1</button>
             <button onclick="appendToDisplay('2')">2</button>
             <button onclick="appendToDisplay('3')">3</button>
-            <button onclick="appendToDisplay('0')" style="grid-column: span 2;">0</button>
+            <button onclick="calculateResult()" class="equals">=</button>
+            <button onclick="appendToDisplay('0')" class="zero">0</button>
             <button onclick="appendToDisplay('.')">.</button>
         </div>
     </div>
@@ -104,4 +108,3 @@
     </script>
 </body>
 </html>
-
