--- a/Mycalculate.html
+++ b/Mycalculate.html
@@ -88,6 +88,11 @@
         .button.clear:hover {
             background-color: #e53935;
         }
+
+        /* Make the "0" button span across two columns */
+        .button.zero {
+            grid-column: span 2;
+        }
     </style>
 </head>
 <body>
@@ -118,7 +123,8 @@
             <button class="button" onclick="appendToDisplay('.')">.</button>
         </div>
         <div class="button-row">
-            <button class="button" onclick="appendToDisplay('0')">0</button>
+            <!-- Use a class 'zero' to make the "0" button span across two columns -->
+            <button class="button zero" onclick="appendToDisplay('0')">0</button>
             <button class="button equals" onclick="calculateResult()">=</button>
         </div>
     </div>
