--- a/Mycalculate.html
+++ b/Mycalculate.html
@@ -13,6 +13,12 @@
             height: 100vh;
             margin: 0;
             background-color: #f4f4f4;
+            flex-direction: column; /* Stack the image and calculator vertically */
+        }
+
+        .image-container {
+            text-align: center;
+            margin-bottom: 20px;
         }
 
         .calculator {
@@ -89,13 +95,24 @@
             background-color: #e53935;
         }
 
-        /* Make the "0" button span across two columns */
         .button.zero {
             grid-column: span 2;
+        }
+
+        /* Image styles */
+        .image-container img {
+            width: 200px;
+            height: 200px;
         }
     </style>
 </head>
 <body>
+    <!-- Image container for hollowknight.png -->
+    <div class="image-container">
+        <img src="hollowknight.png" alt="Hollow Knight">
+    </div>
+
+    <!-- Calculator container -->
     <div class="calculator">
         <input type="text" id="display" class="display" disabled>
         <div class="button-row">
@@ -123,7 +140,6 @@
             <button class="button" onclick="appendToDisplay('.')">.</button>
         </div>
         <div class="button-row">
-            <!-- Use a class 'zero' to make the "0" button span across two columns -->
             <button class="button zero" onclick="appendToDisplay('0')">0</button>
             <button class="button equals" onclick="calculateResult()">=</button>
         </div>
