--- a/Mycalculate.html
+++ b/Mycalculate.html
@@ -33,8 +33,8 @@
         }
 
         .image-container img {
-            width: 100px;
-            height: 100px;
+            width: 50px;
+            height: 50px;
             border-radius: 10px; /* Optional: gives rounded corners to the image */
         }
 
@@ -120,12 +120,7 @@
 <body>
     <!-- Header with text above the image -->
     <div class="header">
-        <h1>我的计算器</h1>
-    </div>
-
-    <!-- Image container for hollowknight.png -->
-    <div class="image-container">
-        <img src="hollowknight.png" alt="Hollow Knight">
+        <h1><img src="hollowknight.png" alt="Hollow Knight">我的计算器</h1>
     </div>
 
     <!-- Calculator container -->
