--- a/Mycalculate.html
+++ b/Mycalculate.html
@@ -120,7 +120,12 @@
 <body>
     <!-- Header with text above the image -->
     <div class="header">
-        <h1><img src="hollowknight.png" alt="Hollow Knight">我的计算器</h1>
+        <h1> <div class="image-container">
+        <img src="hollowknight.png" alt="Hollow Knight">
+    </div>我的计算器</h1>
+    </div>
+     <div class="image-container">
+        <img src="hollowknight.png" alt="Hollow Knight">
     </div>
 
     <!-- Calculator container -->
